# x_tools

local-screen-assistant/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
local-screen-assistant/docs/: progression.md  requirements.md
local-screen-assistant/src/: App.tsx  global.d.ts  styles.css
local-screen-assistant/src-tauri/: Cargo.toml  tauri.conf.json
local-screen-assistant/src-tauri/capabilities/: default.json
local-screen-assistant/src-tauri/src/: capture.rs  hotkeys.rs  main.rs  settings.rs  tray.rs
local-screen-assistant/src-tauri/src/commands/: capture_commands.rs  mod.rs  ocr_commands.rs  settings_commands.rs
local-screen-assistant/src-tauri/src/ocr/: mod.rs  tesseract.rs  windows_native.rs
local-screen-assistant/src/lib/: capture.ts  ocr.ts  settings.ts
local-screen-assistant/src/pages/: CaptureOverlayPage.tsx  CaptureResultPage.tsx  HomePage.tsx  SettingsPage.tsx
